<resources>
    <string name="app_name">Score Keeper: JiuJitSu</string>
    <string name="player_red">Player Red</string>
    <string name="player_green">Player Green</string>
    <string name="zero_text">0</string>
    <string name="add_4_points">+4 Points</string>
    <string name="add_3_points">+3 Points</string>
    <string name="add_2_points">+2 Points</string>
    <string name="add_Advantage">+Advantage</string>
    <string name="reset">Reset</string>
</resources>
